# CoreX

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CoreXX.tag  LICENSE
_script/: _build_freetype.py  _build_glfw3.py  _build_glm.py  _build_libcurl.py  _build_libwebsockets.py  _build_mbedtls.py  _build_rapidjson.py  _build_zlib.py  _check_env.py  _cmake_util.py  _prepared_3rd.py  _unzip_source.py  build_corex.py  build_dependency.py  clean_install.py  xsetup.py
src/: CMakeLists.txt
src/3rd/vk_bootstrap/: VkBootstrap.cpp  VkBootstrap.h
src/3rd/vk_mem_alloc/: vk_mem_alloc.cpp  vk_mem_alloc.h
src/algorithm/: binary_exponentiation.cpp  binary_exponentiation.hpp
src/config/: config.cpp  config.hpp
src/core/: .clang-format  core_byte.cpp  core_byte.hpp  core_chrono.cpp  core_chrono.hpp  core_min.cpp  core_min.h  core_min.hpp  core_noop.cpp  core_noop.hpp  core_os._darwin.cpp  core_os._linux.cpp  core_os._windows.cpp  core_os.darwin.cpp  core_os.hpp  core_os.linux.cpp  core_os.windows.cpp  core_stream.checker.inl  core_stream.cpp  core_stream.hpp  core_time.cpp  core_time.hpp  core_value_util.cpp  core_value_util.hpp  executable.cpp  executable.hpp  functional.cpp  functional.hpp  indexed_storage.cpp  indexed_storage.hpp  indexed_storage_static.cpp  indexed_storage_static.hpp  ini.cpp  ini.hpp  list.cpp  list.hpp  logger.cpp  logger.hpp  memory.cpp  memory.hpp  (+20 more)
src/core/C/: core_min.h  core_rbtree.c  core_rbtree.h
src/crypto/: base64.cpp  base64.hpp  hmac.cpp  hmac.hpp  key.cpp  key.hpp  md5.cpp  md5.hpp  sha.cpp  sha.hpp  sha_rsa_sign.cpp  sha_rsa_sign.hpp
src/locale/: char_range.hpp  char_util.cpp  char_util.hpp  locale.cpp  locale.hpp
src/network/: base.cpp  base.hpp  io_context._darwin.cpp  io_context._linux.cpp  io_context._windows.cpp  io_context.cpp  io_context.hpp  io_context_darwin.cpp  io_context_linux.cpp  io_reactor.cpp  io_reactor.hpp  kcp.cpp  kcp.hpp  net_address.cpp  net_address.hpp  packet.cpp  packet.hpp  socket._darwin.cpp  socket._linux.cpp  socket._windows.cpp  socket.cpp  socket.hpp  tcp_connection._darwin_linux.cpp  tcp_connection._windows.cpp  tcp_connection.cpp  tcp_connection.hpp  tcp_connection_darwin.cpp  tcp_connection_linux.cpp  tcp_connection_windows.cpp  tcp_server._darwin_linux.cpp  tcp_server._windows.cpp  tcp_server.cpp  tcp_server.hpp  tcp_server_darwin.cpp  tcp_server_linux.cpp  tcp_server_windows.cpp  udp_channel._darwin_linux.cpp  udp_channel._windows.cpp  udp_channel.cpp  udp_channel.hpp  (+2 more)
src/network_tmp/: base.hpp  io_context.cpp  io_context_windows.cpp  net_address.cpp  net_address.hpp  packet.cpp  packet.hpp  packet_buffer.cpp  packet_buffer.hpp  tcp_connection.cpp  tcp_server_darwin.cpp  tcp_server_linux.cpp  udp_channel_linux_darwin.cpp
src/object/: object.cpp  object.hpp  object_id_manager.cpp  object_id_manager_mini.cpp
src/renderer/: frame_data.cpp  frame_data.hpp  renderer.cpp  renderer.hpp
src/server_arch/: base.cpp  base.hpp  client.cpp  client.hpp  client_pool.cpp  client_pool.hpp  client_wrapper.cpp  client_wrapper.hpp  message.cpp  message.hpp  message_reader.hpp  message_writer.hpp  server_list.cpp  server_list.hpp  service.cpp  service.hpp  tcp_client.cpp  tcp_client.hpp  tcp_client_pool.cpp  tcp_client_pool.hpp  tcp_client_wrapper.cpp  tcp_client_wrapper.hpp  tcp_service.cpp  tcp_service.hpp  udp_service.cpp  udp_service.hpp
src/service/base/: _.cpp  _.hpp  def.cpp  def.hpp  server_id_manager.cpp  server_id_manager.hpp
src/service/client/: server_id_client.cpp  server_id_client.hpp
src/service/internal/: command.cpp  id.cpp  id.hpp
src/service/internal/protocol/: register_server.hpp
src/service/server_list/: server_id_manager.cpp  server_id_manager.hpp  server_id_service.cpp  server_id_service.hpp
src/ui/: base_ui.cpp  base_ui.hpp  button.hpp  input.cpp  input.hpp
src/vk/: vk.cpp  vk.hpp  vk_debug.cpp  vk_debug.hpp  vk_init.cpp  vk_init.hpp  vk_util_13.cpp  vk_util_13.hpp
src/wsi/: window_desktop.cpp  window_desktop.hpp  wsi.hpp  wsi_android.cpp  wsi_desktop.cpp  wsi_desktop.hpp  wsi_ios.cpp
src/wsi/darwin/: osx.h  osx.mm
src/xengine/: base.cpp  base.hpp  engine.cpp  engine.hpp  engine_config.cpp  engine_config.hpp  engine_main_ui_thread.cpp  engine_main_ui_thread.hpp  engine_render_thread.cpp  engine_render_thread.hpp
src_app/: CMakeLists.txt
src_app/abort/: main.cpp
src_app/broadcaster/: broadcaster.cpp  broadcaster.hpp  broadcaster_observer.cpp  broadcaster_producer.cpp  main.cpp
src_app/dispatcher/: dispatcher.cpp  dispatcher.hpp  dispatcher_consumer.cpp  dispatcher_producer.cpp  main.cpp
src_app/guard/: main.cpp
src_test/: CMakeLists.txt
src_test/cpp/: main.cpp
src_test/echo_client/: main.cpp
src_test/echo_client_pool/: _main.cpp
src_test/echo_server/: main.cpp
src_test/env_check/: main.cpp
src_test/memory_pool/: main.cpp
src_test/mp/: main.cpp
src_test/object_id_manager/: main.cpp
src_test/rsa/: main.cpp
src_test/test_string/: main.cpp
src_test/timer_wheel/: main.cpp
